--- a/gameWon.html
+++ b/gameWon.html
@@ -67,10 +67,10 @@
         }
         .letter {
             position: absolute;
-            padding: 8px;
+            padding: 15px 30px;
             bottom: -160px;
-            width: 200px;
-            height: 200px;
+            width: 280px;
+            height: 220px;
             background: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -85,7 +85,7 @@
         }
         .letter.show {
             position: absolute;
-            top:400px;
+            top: 400px;
             transform: translateY(-180px); /* Move up from behind the mail */
             opacity: 1;
             z-index: 3; /* Bring above the mail wrapper */
