--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="firstNo">
             <h2>Oh man :&lpar;</h2>
-            <p>Bist du sicher?</p>
+            <p>Bist du sicher, dass du nicht willst?</p>
             <div class="btnContainer">
                 <button id="yesSure">Ja bin ich.</button>
                 <button id="notSure">Ich bin mir nicht sicher.</button>
